Change GCG early stopping criterion.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ data/alpaca_data_cleaned.json
 data/alpaca_data.json
 data/annotations_seed0_configs.json
 data/davinci_003_outputs.json
+*.log
+tmp_*
+_tmp
